--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <footer>
       <p>Copyright 2024</p>
+      <p><a href="">Aviso Legal</a> - <a href="">Política de cookies</a></p>
     </footer>
   </body>
 </html>
