creado main en index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <h1>Home</h1>
+    </main>
     <footer>
       <p>Copyright 2024</p>
       <p><a href="">Aviso Legal</a> - <a href="">Política de cookies</a></p>
